# amazon-settlements-edu-access

./: .gitignore  00_initial_exploration.ipynb  01_01_distance_calculation_sample.ipynb  01_02_distance_calculation_others.ipynb  01_03_distance_calculation_brazil.ipynb  02_population_calculation_sample.ipynb  03_population_calculation_brazil.ipynb  03_population_calculation_total.ipynb  04_population_calculation_results.ipynb  04_population_distance_analysis.ipynb  04_population_distance_analysis_with_bra.ipynb  05_01_new_schools.ipynb  06_01_riverside_schools.ipynb  LICENSE  README.md  explore.qgz  main.py  pyproject.toml
